@@ -1,4 +1,6 @@
 DIST gcstar-1.4.3.tar.gz 2505623 RMD160 ef48c03e5118b417db81fc856da0b2f91735d09b SHA1 9ff69f5dff4f20cce44bbb27b15e93f2f4f18e08 SHA256 1d0e079fc5c1bae9f5f5590ba07bff005136fe0a53876c55022689e5e14e4629
+DIST gcstar-1.6.1.tar.gz 4487114 RMD160 635277815df6da62e1c4c185e09739f99e28eae5 SHA1 8e6e7b31ef55fffe246ebe77c9a251652aa51065 SHA256 5311ac93cfb542ae8600a954808ff8c2ff6e4f9deb843dc4d9e576e05727100c
 EBUILD gcstar-1.4.3-r1.ebuild 1895 RMD160 61599b528f715304859362677e15b8df0f408d96 SHA1 4d8897e516b16c3bd190023059f3f5e3462c66d9 SHA256 e3820a31bc4289226d0a97d96ac88f655c0ca3865d807848cf2cc3d6a19018dc
-MISC ChangeLog 3258 RMD160 d0f5460b7d184480d382e1c92bc2fc697b242a70 SHA1 8d2c58f89639b28b9bc8887fc81d8fe2ed1aa1be SHA256 546d501ca157b87c00106048ed2e386823535e1ffefe74207c4bbf11f894b6d3
+EBUILD gcstar-1.6.1.ebuild 2708 RMD160 75b64686a3e9647fde0d95d3aa6de78534bb239f SHA1 8a7412a0f888fa2e320315484102c14e72e8f294 SHA256 368920e955acf556211290a1d3297f14a8f537a62037e5e88fd756c716f06896
+MISC ChangeLog 3396 RMD160 ed08d2e4e17ced19ef78ab1b44e2a1bcc99d3b2b SHA1 246493b15c103d678185a6165a84a89e60f7efa8 SHA256 a4706e65823fa1a4e4594b9b4aad9bfc2874543506ad4c6daf885bc323bd7f3f
 MISC metadata.xml 630 RMD160 76dd3eaf6f0ddf9a2b1d0f8cf8b2a79d045b7066 SHA1 73776c9aa7a729a69000845249ec7a27b2fb1a0b SHA256 12ec4ce6382c7ecf07344bd2e56d714dd7319f22af8b24346314af275583e176
