@@ -1,6 +1,12 @@
-# ChangeLog for media-video/gcstar
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for app-misc/gcstar
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gcstar-1.6.1 (18 Oct 2010)
+
+  18 Oct 2010; Трацевский Александр <alex@gentoo.org>
+  +gcstar-1.6.1.ebuild:
+  new version
 
   21 Jul 2009; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
   gcstar-1.4.3.ebuild:
